--- a/lab1/style.css
+++ b/lab1/style.css
@@ -1,15 +1,19 @@
-*{
+body{
+    background: rgba(185, 185, 185, 0.507);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
-body{
-    background: rgba(185, 185, 185, 0.507);
-}
-
-.header{
-    font-size: 20px;
+.header h1{
+    font-size: 30px;
     text-align: center;
-    display: block;
+    margin:auto;
+}
+.navigation{
+    display:block;
+    text-align:right;
+}
+.navigation a{
+    margin-right:auto;
 }
 .content{
     display: flex;
@@ -36,7 +40,7 @@ body{
     border-radius: 20px;
     margin-top: 10px;
 }
-.bornPlace{
+.aboutMe p{
     color:rgb(0, 0, 0);
 }
 
@@ -48,7 +52,7 @@ body{
     border-radius: 20px;
     margin-top: 10px;
 }
-.favoriteFilmsList{
+.favoriteFilms ul{
     text-align:left;
     font-size: 20px;
 }
@@ -61,7 +65,7 @@ body{
     border-radius: 20px;
     margin-top:10px;
 }
-.favoriteMusicList{
+.favoriteMusic ol{
     text-align:left;
     font-size: 20px;
 }
@@ -74,7 +78,7 @@ body{
     border-radius: 20px;
     margin-top: 10px;
 }
-.telega{
+.myLinks a{
     font-size: 15px;
     color: rgb(0, 256, 0);
 }
@@ -84,4 +88,96 @@ body{
     height: 200px;
     border: 1px solid black;
     border-radius: 20px;
+}
+
+/* page2 */
+.container{
+    background:red;
+}
+.block{
+    background:blue;
+    margin-left: auto;
+    margin-right:auto;
+    width:200px;
+    height:200px;
+}
+.container img{
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    width:200px;
+}
+
+.container-2{
+    background:rgb(0, 82, 82);
+    height:500px;
+    display:flex;
+    align-items:center;
+}
+.block-2{
+    background:hotpink;
+    width:200px;
+    height: 200px;
+    margin-right:auto;
+    margin-left:auto;
+}
+
+.container-3{
+    background:rgb(122, 0, 112);
+    height: 500px;
+    border: 5px solid black;
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content:space-between;
+}
+.block-3{
+    width:200px;
+    height:200px;
+    margin:2px;
+    /* display:flex;
+    align-items:center; */
+    background:red;
+    text-align:center;
+    font-size:30px;
+}
+
+.container-4{
+    height:1000px;
+    width:1000px;
+    border:5px solid black;
+    position:absolute;
+    top:1800px;
+}
+.square-1{
+    height:200px;
+    width:200px;
+    border:2px solid red;
+    position:absolute;
+    top:100px;
+    left:200px;
+}
+.square-2{
+    height:200px;
+    width:200px;
+    border:2px solid blue;
+    position:absolute;
+    top:250px;
+    left:350px;
+}
+.square-3{
+    height:200px;
+    width:200px;
+    border:2px solid green;
+    position:absolute;
+    top:400px;
+    left:500px;
+}
+
+.fixedCat{
+    position:fixed;
+    width:100px;
+    height:100px;
+    right:0px;
+    bottom:0px;
 }
