корректировка отступа, лабораторна#6

--- a/bootstrap.lab6,7/css/style.css
+++ b/bootstrap.lab6,7/css/style.css
@@ -14,7 +14,12 @@
 
 #filmography{
     margin-top:40px;
+    margin-left:150px;
 }
 #myCarousel{
+    margin-left:150px;
+}
+
+#biography{
     margin-left:150px;
 }
