--- a/bootstrap.lab6,7/css/style.css
+++ b/bootstrap.lab6,7/css/style.css
@@ -14,12 +14,29 @@
 
 #filmography{
     margin-top:40px;
-    margin-left:150px;
 }
 #myCarousel{
     margin-left:150px;
 }
 
-#biography{
-    margin-left:150px;
+.colinfo{
+    text-align:center;
+}
+
+.container-fluid h1{
+    text-align:center;
+    margin-top:20px;
+}
+
+.col-lg-3 .card-body{
+    text-align:center;
+}
+
+.card{
+    margin: auto;
+    margin-top:10px;
+}
+
+.tablefilms{
+    margin:auto;
 }
